fixing overlapping notes text area changing from vw to percentage

--- a/src/app/components/file/file-create/file-create.component.scss
+++ b/src/app/components/file/file-create/file-create.component.scss
@@ -34,7 +34,8 @@ input, button, select {
 }
 
 .notes {
-    width: 40vw;
+    width: 75%;
+    border: 1px solid purple;
 }
 
 // label {
